--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Home Page</h1>
+        <h1>2mins MAGGI for a rainy day</h1>
+        <img src="images/Maggi.jpg" alt="maggi image for home page">
 
+        <a href="./recipes/maggi.html">2 mins Maggi</a>
+        <li><a href='./recipes/milk-steak.html'>Milk steak</a></li>
+    
     </body>
 </html>
